# rust-mandelbrot-gui

./: Cargo.toml  Justfile  notes.md
.cargo/: config.toml
.stamp/templates/fractal_impl/{{package_name}}/: Cargo.toml  {{package_name}}.rs
gui/: Cargo.toml
gui-imgui/: Cargo.toml
gui-imgui/src/: main.rs  mouse_drag.rs
gui-sdl2/: Cargo.toml
gui-sdl2/src/: main.rs  worker_thread.rs
gui/shaders/: transform.wgsl
gui/src/: gui.rs  gui_framework.rs  main.rs  mouse_drag.rs  pan_zoom_debounce.rs  renderer.rs  worker_thread.rs
gui/src/fractal/: mandelbrot.rs
impls/color_luma_basic/: Cargo.toml  color_luma_basic.rs
impls/mandelbrot_f64/: Cargo.toml  mandelbrot_f64.rs
impls/mandelbrot_f64/src/: lib.rs  mandelbrot_f64.rs  mandelbrot_f64_impl.rs
impls/mandelbrot_f64_new/: Cargo.toml  mandelbrot_f64.rs
impls/util/: Cargo.toml
impls/util/src/: config_helper.rs  lib.rs
interface/color_func/: Cargo.toml  color_func.rs
interface/fractal_func/: Cargo.toml  fractal_func.rs
shared/: Cargo.toml
shared/src/: lib.rs  lib_expanded.rs  raw.rs  util.rs
src/: fractal_worker.rs  gui.rs  main.rs
src/fractal/: mandelbrot.rs  mod.rs
worker/: Cargo.toml
worker/src/: cell_grid.rs  config_manager.rs  fractal_worker2.rs  lib.rs  matrix_util.rs  util.rs
