[package]
name = "gui-imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
mandelbrot_f64 = { path = "../impls/mandelbrot_f64" }
worker = { path = "../worker" }

itertools = "0.10"
rayon = "1"
# crossbeam = "0.8"

# png = "0.17"
# palette = "0.6.0"
# rgb = "0.8"
image = "0.24"
# imageproc = "0.22"

# ndarray = { version = "0.15.4", features = ["rayon"] }
ultraviolet = { version = "0.8", features = [ "f64", "int" ] }

pixels = "0.9.0"
glutin = "0.27.0"
glow = "0.10.0"
winit = "0.25.0"
raw-window-handle = "0.3.4"
imgui = "0.8.0"
imgui-glow-renderer = "0.8.0"
imgui-winit-support = "0.8.0"
gl = "0.14"

log = "0.4"
env_logger = "0.9"
structopt = { version = "0.3.26", features = [ "paw" ] }
paw = "1"
anyhow = "1"


core_extensions = { version = "1.5", features = ["integers", "self_ops"]}

# polars = {version = "0.19.1", default_features=false, features=["performant", "rows", "dataframe_arithmetic"]}
# polars = {version = "0.19.1", default_features=false, features=["performant"]}
# polars-core = { version = "0.19.1", default_features=false, features=["performant", "private"] }
# polars = { version = "0.19.1", features = ["default", "cross_join", "rows", "dataframe_arithmetic"] }
# polars = { version = "0.19.1"}
# polars = "0.19.1"
# arrow = "8.0.0"

