[package]
name = "rust-mandelbrot-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker = { path = "../worker" }

itertools = "0.10"
rayon = "1"
# crossbeam = "0.8"
ordered-float = "2.0"
chrono = "0.4.19"
abi_stable = { version = "0.10.4", features = ["rust_latest_stable"] }

# png = "0.17"
# palette = "0.6.0"
# rgb = "0.8"
image = "0.24"
# imageproc = "0.22"

bytemuck = "1.7"
ultraviolet = { version = "0.8", features = [ "f64", "int" ] }

pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.11"
egui = "0.16"
egui_wgpu_backend = "0.16"
egui-winit = { version = "0.16", default-features = false, features = ["links"] }

native-dialog = "0.6.3"

log = "0.4"
env_logger = "0.9"
structopt = { version = "0.3.26", features = [ "paw" ] }
paw = "1"
anyhow = "1"

core_extensions = { version = "1.5", features = ["integers", "self_ops"]}
