[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color_func = { path = "../interface/color_func" }
fractal_func = { path = "../interface/fractal_func" }

abi_stable = { version = "0.10.4", features = ["rust_latest_stable"] }

itertools = "0.10"
rayon = "1"
rand = "0.8.5"

log = "0.4"
env_logger = "0.9"
anyhow = "1"

core_extensions = { version = "1.5", features = ["integers", "self_ops", "type_identity", "collections"]}

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.1"
tempfile = "3.3.0"
