[package]
name = "mandelbrot_f64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
shared = { path = "../../shared" }
abi_stable = "0.10.4"


# ndarray = { version = "0.15.4", features = ["rayon"] }
# ultraviolet = { version = "0.8", features = [ "f64", "int" ] }
num = "0.4"
# # rug = { version = "1", features = ["float", "complex"] }
# simdeez = "1"

log = "0.4"
env_logger = "0.9"
anyhow = "1"
itertools = "0.10"
