[package]
name = "mandelbrot_f64"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "mandelbrot_f64.rs"
crate-type = ["cdylib",'rlib']
[features]
default = ["cdylib"]
cdylib = []

[dependencies]
fractal_func = { path = "../../interface/fractal_func" }
impl_util = { path = "../util" }

abi_stable = { version = "0.10.4", features = ["rust_latest_stable"] }
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
