[package]
name = "fractal_func"
version = "0.1.0"
edition = "2021"

[lib]
path = "fractal_func.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
abi_stable = { version = "0.10.4", features = ["rust_latest_stable"] }
